--- a/www/welcomePage.html
+++ b/www/welcomePage.html
@@ -3,9 +3,63 @@
 <html>
   <head>
     <title>Welcome!</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+
+    <!-- NAVIGATION AND HEADER BAR -->
+    <header class="header">
+      <h1 class="page-title">Student<span id="title-p2" >Budgets</span></h1>
+      <nav>
+          <ul class="nav-links">
+              <li class="nav-link active-page"><a href="/">Home</a></li>
+              <li class="nav-link"><a href="/">About</a></li>
+              <li class="nav-link"><a href="/">Help</a></li>
+          </ul>
+      </nav>
+      <ul class="nav-links">
+        <li class="nav-link"><a href="/">Sign In</a></li>
+        <li><a href="" class="contact"><button>Sign Up</button></a></li>
+      </ul>
+    </header>
+
+    <!-- HERO CONTENT -->
+    <div class="hero">
+      <div class="arr"><img src="images/arrow-left.png" alt=""></div>
+      <div class="hero-text">
+        <h2 class="hero-title" >Control Your Finances</h2>
+        <h3 class="hero-subtitle">The Right Way...</h3>
+        <p class="hero-paragraph">Suscipit adipiscing bibendum est ultricies. Nunc sed blandit libero volutpat. Pellentesque habitant morbi tristique senectus et netus. Faucibus nisl tincidunt eget nullam non nisi. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a.</p>
+        <div class="hero-action"><a href="" class="contact"><button>Start Now</button></a> <a href="">Learn More</a></div>
+      </div>
+      <div class="hero-image">
+        <img src="/images/wallet-icon.png" alt="wallet-icon">
+      </div>
+      <div class="arr"><img src="images/arrow-right.png" alt=""></div>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div class="main">
+      <h1>Lorem ipsum dolor sit amet</h1>
+      <br />
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh tortor id. Faucibus et molestie ac feugiat sed lectus vestibulum. Quisque id diam vel quam elementum pulvinar etiam non. Erat pellentesque adipiscing commodo elit. Phasellus vestibulum lorem sed risus ultricies. Ante metus dictum at tempor commodo ullamcorper a lacus vestibulum. Urna porttitor rhoncus dolor purus non enim praesent. Libero id faucibus nisl tincidunt eget nullam non nisi. Sapien pellentesque habitant morbi tristique senectus et netus. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Nisl vel pretium lectus quam id leo in. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim diam. Faucibus interdum posuere lorem ipsum. Commodo nulla facilisi nullam vehicula ipsum. Diam ut venenatis tellus in metus.</p>
+      <br>
+      <div class="main-content">
+        <div>
+          <img src="/images/bank.png" alt="">
+          <p>Quam pellentesque nec nam aliquam sem et. Dapibus ultrices in iaculis nunc sed augue. Faucibus nisl tincidunt eget nullam non nisi. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a.</p>
+        </div>
+        <div>
+          <img src="/images/money.png" alt="">
+          <p>Duis ultricies lacus sed turpis tincidunt id. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque. Volutpat est velit egestas dui id. Nisl condimentum id</p>
+        </div>
+        
+        <div>
+          <img src="/images/calendar-512.png" alt="">
+          <p>Sed elementum tempus egestas sed. Posuere lorem ipsum dolor sit amet. Ut faucibus pulvinar elementum integer enim neque.Sed elementum tempus egestas sed. Posuere lorem ipsum dolor sit amet. Ut faucibus pulvinar elementum integer enim neque.</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
