Cleaned up some of the HTML & CSS. Started on additional pages

--- a/www/welcomePage.html
+++ b/www/welcomePage.html
@@ -10,17 +10,17 @@
 
     <!-- NAVIGATION AND HEADER BAR -->
     <header class="header">
-      <h1 class="page-title">Student<span id="title-p2" >Budgets</span></h1>
+      <h1 class="page-title"><a href="welcomePage.html">Student<span id="title-p2" >Budgets</span></a></h1>
       <nav>
           <ul class="nav-links">
-              <li class="nav-link active-page"><a href="/">Home</a></li>
-              <li class="nav-link"><a href="/">About</a></li>
-              <li class="nav-link"><a href="/">Help</a></li>
+              <li class="nav-link active-page"><a href="/welcomePage.html">Home</a></li>
+              <li class="nav-link"><a href="/about.html">About</a></li>
+              <li class="nav-link"><a href="/help.html">Help</a></li>
           </ul>
       </nav>
       <ul class="nav-links">
-        <li class="nav-link"><a href="/">Sign In</a></li>
-        <li><a href="" class="contact"><button>Sign Up</button></a></li>
+        <li class="nav-link"><a href="/signInPage.html">Sign In</a></li>
+        <li class="default-button"><a href="/signInPage.html">Sign Up</a></li>
       </ul>
     </header>
 
@@ -30,8 +30,8 @@
       <div class="hero-text">
         <h2 class="hero-title" >Control Your Finances</h2>
         <h3 class="hero-subtitle">The Right Way...</h3>
-        <p class="hero-paragraph">Suscipit adipiscing bibendum est ultricies. Nunc sed blandit libero volutpat. Pellentesque habitant morbi tristique senectus et netus. Faucibus nisl tincidunt eget nullam non nisi. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a.</p>
-        <div class="hero-action"><a href="" class="contact"><button>Start Now</button></a> <a href="">Learn More</a></div>
+        <p class="hero-para">Suscipit adipiscing bibendum est ultricies. Nunc sed blandit libero volutpat. Pellentesque habitant morbi tristique senectus et netus. Faucibus nisl tincidunt eget nullam non nisi. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a.</p>
+        <div class="hero-links"><a href="/signInPage.html" class="default-button hero-link">Start Now</a><a href="" class="hero-link">Learn More</a></div>
       </div>
       <div class="hero-image">
         <img src="/images/wallet-icon.png" alt="wallet-icon">
@@ -43,9 +43,9 @@
     <div class="main">
       <h1>Lorem ipsum dolor sit amet</h1>
       <br />
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh tortor id. Faucibus et molestie ac feugiat sed lectus vestibulum. Quisque id diam vel quam elementum pulvinar etiam non. Erat pellentesque adipiscing commodo elit. Phasellus vestibulum lorem sed risus ultricies. Ante metus dictum at tempor commodo ullamcorper a lacus vestibulum. Urna porttitor rhoncus dolor purus non enim praesent. Libero id faucibus nisl tincidunt eget nullam non nisi. Sapien pellentesque habitant morbi tristique senectus et netus. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Nisl vel pretium lectus quam id leo in. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim diam. Faucibus interdum posuere lorem ipsum. Commodo nulla facilisi nullam vehicula ipsum. Diam ut venenatis tellus in metus.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh tortor id. Faucibus et molestie ac feugiat sed lectus vestibulum. Quisque id diam vel quam elementum pulvinar etiam non. Erat pellentesque adipiscing commodo elit. Phasellus vestibulum lorem sed risus ultricies. Ante metus dictum at tempor commodo ullamcorper a lacus vestibulum. Urna porttitor rhoncus dolor purus non enim praesent. </p>
       <br>
-      <div class="main-content">
+      <div class="welcome-content">
         <div>
           <img src="/images/bank.png" alt="">
           <p>Quam pellentesque nec nam aliquam sem et. Dapibus ultrices in iaculis nunc sed augue. Faucibus nisl tincidunt eget nullam non nisi. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a.</p>
