Changes made to dashboard page and styling

--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -10,27 +10,92 @@
 
     <!-- NAVIGATION AND HEADER BAR -->
     <header class="header">
-      <h1 class="page-title"><a href="welcomePage.html">Student<span id="title-p2" >Budgets</span></a></h1>
+      <h1 class="page-title"><a href="dashboard.html">Student<span id="title-p2" >Budgets</span></a></h1>
       <nav>
           <ul class="nav-links">
-              <li class="nav-link active-page"><a href="/welcomePage.html">Home</a></li>
-              <li class="nav-link"><a href="/about.html">About</a></li>
+              <li class="nav-link active-page"><a href="/dashboard.html">Dashboard</a></li>
+              <li class="nav-link"><a href="/about.html">Contact</a></li>
               <li class="nav-link"><a href="/help.html">Help</a></li>
           </ul>
       </nav>
       <ul class="nav-links">
-        <li class="nav-link"><a href="/signInPage.html">Sign In</a></li>
-        <li class="default-button"><a href="/signInPage.html">Sign Up</a></li>
+        <li class="nav-link"><a href="/signInPage.html">My Account</a></li>
+        <li class="nav-link"><a href="/signInPage.html">Sign Out</a></li>
       </ul>
     </header>
 
     <!-- MAIN CONTENT -->
     <div class="main-dashboard">
-      <div class="dashboard-side-panel">
-        <h1>Side Panel</h1>
-      </div>
+
       <div class="dashboard-main-panel">
-        <h1>Main Panel</h1>
+        <h1 class="content-title">Dashboard</h1>
+          <hr>
+        <div class="dashboard-icons">
+
+          <div class="dash-icon">
+            <img src="/images/pi-chart.png" alt="">
+            <h2>Budget Report</h2>
+            <hr>
+            <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+            <div class="default-button"><a href="/budget-report">View Budget Report</a></div>
+          </div>
+
+          <div class="dash-icon">
+            <img src="/images/bank.png" alt="">
+            <h2>Bank Statements</h2>
+            <hr>
+            <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+            <div class="default-button"><a href="/budget-report">Manage Bank Statements</a></div>
+          </div>
+
+          <div class="dash-icon">
+            <img src="/images/money.png" alt="">
+            <h2>Purchases</h2>
+            <hr>
+            <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+            <div class="default-button"><a href="/budget-report">View Purchases</a></div>
+          </div>
+
+          <div class="dash-icon">
+            <img src="/images/calendar-512.png" alt="">
+            <h2>Calendar</h2>
+            <hr>
+            <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+            <div class="default-button"><a href="/budget-report">View Calendar</a></div>
+          </div>
+
+          <div class="dash-icon">
+            <img src="/images/Wallet-icon.png" alt="">
+            <h2>Money Saving Tips</h2>
+            <hr>
+            <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+            <div class="default-button"><a href="/saving-tips">View Tips on Saving Money</a></div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="dashboard-side-panel">
+        <h3>Upcoming Payments</h3>
+        <hr>
+        <div class="panel-content">
+          <p>Ipsum Lorem</p>
+          <hr>
+          <p>Ipsum Lorem</p>
+          <hr>
+          <p>Ipsum Lorem</p>
+          <hr>
+          <p>Ipsum Lorem</p>
+          <hr>
+          <p>Ipsum Lorem</p>
+          <hr>
+          <p>Ipsum Lorem</p>
+          <hr>
+          <p>Ipsum Lorem</p>
+          <hr>
+          <p>Ipsum Lorem</p>
+          <hr>
+        </div>
       </div>
     </div>
   </body>
