Additional changes to HTML & CSS on dashboard and contact pages

--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -10,12 +10,12 @@
 
     <!-- NAVIGATION AND HEADER BAR -->
     <header class="header">
-      <h1 class="page-title"><a href="dashboard.html">Student<span id="title-p2" >Budgets</span></a></h1>
+      <h1 class="page-title"><a href="welcomePage.html">Student<span id="title-p2" >Budgets</span></a></h1>
       <nav>
           <ul class="nav-links">
               <li class="nav-link active-page"><a href="/dashboard.html">Dashboard</a></li>
               <li class="nav-link"><a href="/about.html">Contact</a></li>
-              <li class="nav-link"><a href="/help.html">Help</a></li>
+              <li class="nav-link"><a href="/contact.html">Help</a></li>
           </ul>
       </nav>
       <ul class="nav-links">
@@ -37,7 +37,7 @@
             <h2>Budget Report</h2>
             <hr>
             <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
-            <div class="default-button"><a href="/budget-report">View Budget Report</a></div>
+            <a href="/budget-report"><div class="default-button">View</div></a>
           </div>
 
           <div class="dash-icon">
@@ -45,7 +45,7 @@
             <h2>Bank Statements</h2>
             <hr>
             <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
-            <div class="default-button"><a href="/budget-report">Manage Bank Statements</a></div>
+            <a href="/budget-report"><div class="default-button">View</div></a>
           </div>
 
           <div class="dash-icon">
@@ -53,7 +53,7 @@
             <h2>Purchases</h2>
             <hr>
             <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
-            <div class="default-button"><a href="/budget-report">View Purchases</a></div>
+            <a href="/budget-report"><div class="default-button">View</div></a>
           </div>
 
           <div class="dash-icon">
@@ -61,7 +61,7 @@
             <h2>Calendar</h2>
             <hr>
             <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
-            <div class="default-button"><a href="/budget-report">View Calendar</a></div>
+            <a href="/budget-report"><div class="default-button">View</div></a>
           </div>
 
           <div class="dash-icon">
@@ -69,7 +69,7 @@
             <h2>Money Saving Tips</h2>
             <hr>
             <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
-            <div class="default-button"><a href="/saving-tips">View Tips on Saving Money</a></div>
+            <a href="/saving-tips"><div class="default-button">View</div></a>
           </div>
 
         </div>
