--- a/www/welcomePage.html
+++ b/www/welcomePage.html
@@ -13,14 +13,14 @@
       <h1 class="page-title"><a href="welcomePage.html">Student<span id="title-p2" >Budgets</span></a></h1>
       <nav>
           <ul class="nav-links">
-              <li class="nav-link active-page"><a href="/welcomePage.html">Home</a></li>
-              <li class="nav-link"><a href="/about.html">About</a></li>
-              <li class="nav-link"><a href="/help.html">Help</a></li>
+            <a href="/welcomePage.html"><li class="nav-link active-page">Home</li></a>
+            <a href="/about.html"><li class="nav-link">About</li></a>
+            <a href="/contact.html"><li class="nav-link">Contact</li></a>
           </ul>
       </nav>
       <ul class="nav-links">
-        <li class="nav-link"><a href="/signInPage.html">Sign In</a></li>
-        <li class="default-button"><a href="/signInPage.html">Sign Up</a></li>
+        <a href="/signInPage.html"><li class="nav-link">Sign In</li></a>
+        <a class="default-button" href="/signInPage.html">Sign Up</a>
       </ul>
     </header>
 
@@ -45,6 +45,7 @@
       <br />
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh tortor id. Faucibus et molestie ac feugiat sed lectus vestibulum. Quisque id diam vel quam elementum pulvinar etiam non. Erat pellentesque adipiscing commodo elit. Phasellus vestibulum lorem sed risus ultricies. Ante metus dictum at tempor commodo ullamcorper a lacus vestibulum. Urna porttitor rhoncus dolor purus non enim praesent. </p>
       <br>
+      <hr>
       <div class="welcome-content">
         <div>
           <img src="/images/bank.png" alt="">
