Changes new pages for accounts added.

--- a/www/about.html
+++ b/www/about.html
@@ -26,8 +26,16 @@
 
     <!-- MAIN CONTENT -->
     <div class="main-subpage">
-      <div class="subpage-content">
-        <h1>Sign In</h1>
+      <h1 class="content-title">About Us</h1>
+      <hr>
+      <div class="subpage-content about">
+        <p class="about-text"> Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. Nulla pellentesque dignissim enim sit amet venenatis. Leo duis ut diam quam nulla porttitor massa. Tristique risus nec feugiat in fermentum posuere urna nec. Vitae et leo duis ut. Vivamus arcu felis bibendum ut. Elit pellentesque habitant morbi tristique senectus et netus. Adipiscing bibendum est ultricies integer quis auctor. Tincidunt id aliquet risus feugiat in ante metus dictum. Quis viverra nibh cras pulvinar mattis nunc. Mi sit amet mauris commodo quis imperdiet massa tincidunt nunc. Ipsum dolor sit amet consectetur adipiscing elit. Lacus vel facilisis volutpat est velit. Sed viverra ipsum nunc aliquet bibendum enim facilisis gravida neque. Eu volutpat odio facilisis mauris. Vitae tempus quam pellentesque nec nam aliquam sem et tortor.</p>
+
+        <hr>
+        <h3>"Quam pellentesque nec nam aliquam sem et. Dapibus ultrices in iaculis nunc sed augue."</h3>
+        <hr>
+        <p class="about-text">Enim nec dui nunc mattis enim ut tellus elementum sagittis. Scelerisque viverra mauris in aliquam sem fringilla ut morbi. Id donec ultrices tincidunt arcu non sodales neque. Id volutpat lacus laoreet non curabitur gravida arcu. Urna nec tincidunt praesent semper feugiat. Tempus quam pellentesque nec nam aliquam sem. Ultrices tincidunt arcu non sodales neque sodales ut etiam. Tempor id eu nisl nunc. Dignissim convallis aenean et tortor at risus. Suscipit adipiscing bibendum est ultricies integer quis auctor. Nisl nunc mi ipsum faucibus vitae. Volutpat ac tincidunt vitae semper quis. Turpis massa tincidunt dui ut. Risus quis varius quam quisque id.</p>
+        
       </div>
       
     </div>
