--- a/www/bank-statements.html
+++ b/www/bank-statements.html
@@ -13,21 +13,23 @@
       <h1 class="page-title"><a href="welcomePage.html">Student<span id="title-p2" >Budgets</span></a></h1>
       <nav>
           <ul class="nav-links">
-            <a href="/welcomePage.html"><li class="nav-link ">Home</li></a>
-            <a href="/about.html"><li class="nav-link">About</li></a>
-            <a href="/contact.html"><li class="nav-link">Contact</li></a>
+              <li class="nav-link"><a href="/dashboard.html">Dashboard</a></li>
+              <li class="nav-link"><a href="/account.html">My Account</a></li>
+              <li class="nav-link"><a href="/contact.html">Contact</a></li>
           </ul>
       </nav>
       <ul class="nav-links">
-        <a href="/signInPage.html"><li class="nav-link">Sign In</li></a>
-        <a class="default-button" href="/signInPage.html">Sign Up</a>
+        <li class="nav-link"><a href="/signInPage.html">Sign Out</a></li>
       </ul>
     </header>
 
     <!-- MAIN CONTENT -->
     <div class="main-subpage">
-      <div class="subpage-content">
-        <h1>Sign In - <a href="Dashboard.html" style="color: blue;">Temporary Dashboard Link</a></h1>
+      <h1 class="content-title">Bank Statements</h1>
+      <hr>
+      <div class="subpage-content bank-statements">
+  
+        
       </div>
       
     </div>
