--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -14,12 +14,11 @@
       <nav>
           <ul class="nav-links">
               <li class="nav-link active-page"><a href="/dashboard.html">Dashboard</a></li>
-              <li class="nav-link"><a href="/about.html">Contact</a></li>
-              <li class="nav-link"><a href="/contact.html">Help</a></li>
+              <li class="nav-link"><a href="/account.html">My Account</a></li>
+              <li class="nav-link"><a href="/contact.html">Contact</a></li>
           </ul>
       </nav>
       <ul class="nav-links">
-        <li class="nav-link"><a href="/signInPage.html">My Account</a></li>
         <li class="nav-link"><a href="/signInPage.html">Sign Out</a></li>
       </ul>
     </header>
@@ -37,7 +36,7 @@
             <h2>Budget Report</h2>
             <hr>
             <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
-            <a href="/budget-report"><div class="default-button">View</div></a>
+            <a href="/budget-report.html"><div class="default-button">View</div></a>
           </div>
 
           <div class="dash-icon">
@@ -45,7 +44,7 @@
             <h2>Bank Statements</h2>
             <hr>
             <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
-            <a href="/budget-report"><div class="default-button">View</div></a>
+            <a href="/bank-statements.html"><div class="default-button">View</div></a>
           </div>
 
           <div class="dash-icon">
@@ -53,7 +52,7 @@
             <h2>Purchases</h2>
             <hr>
             <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
-            <a href="/budget-report"><div class="default-button">View</div></a>
+            <a href="/purchases.html"><div class="default-button">View</div></a>
           </div>
 
           <div class="dash-icon">
@@ -61,7 +60,7 @@
             <h2>Calendar</h2>
             <hr>
             <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
-            <a href="/budget-report"><div class="default-button">View</div></a>
+            <a href="/calendar.html"><div class="default-button">View</div></a>
           </div>
 
           <div class="dash-icon">
@@ -69,7 +68,7 @@
             <h2>Money Saving Tips</h2>
             <hr>
             <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
-            <a href="/saving-tips"><div class="default-button">View</div></a>
+            <a href="/saving-tips.html"><div class="default-button">View</div></a>
           </div>
 
         </div>
