--- a/www/about.html
+++ b/www/about.html
@@ -14,7 +14,7 @@
       <nav>
           <ul class="nav-links">
             <a href="/welcomePage.html"><li class="nav-link ">Home</li></a>
-            <a href="/about.html"><li class="nav-link">About</li></a>
+            <a href="/about.html"><li class="nav-link active-page">About</li></a>
             <a href="/contact.html"><li class="nav-link">Contact</li></a>
           </ul>
       </nav>
@@ -35,9 +35,9 @@
         <h3>"Quam pellentesque nec nam aliquam sem et. Dapibus ultrices in iaculis nunc sed augue."</h3>
         <hr>
         <p class="about-text">Enim nec dui nunc mattis enim ut tellus elementum sagittis. Scelerisque viverra mauris in aliquam sem fringilla ut morbi. Id donec ultrices tincidunt arcu non sodales neque. Id volutpat lacus laoreet non curabitur gravida arcu. Urna nec tincidunt praesent semper feugiat. Tempus quam pellentesque nec nam aliquam sem. Ultrices tincidunt arcu non sodales neque sodales ut etiam. Tempor id eu nisl nunc. Dignissim convallis aenean et tortor at risus. Suscipit adipiscing bibendum est ultricies integer quis auctor. Nisl nunc mi ipsum faucibus vitae. Volutpat ac tincidunt vitae semper quis. Turpis massa tincidunt dui ut. Risus quis varius quam quisque id.</p>
-        
+
       </div>
-      
+
     </div>
   </body>
 </html>
