Added favicon to every page

--- a/www/contact.html
+++ b/www/contact.html
@@ -4,6 +4,7 @@
   <head>
     <title>Welcome!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/favicon"/>
   </head>
 
   <body>
@@ -43,15 +44,15 @@
         </div>
 
         <div class="contact-side-text">
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. Nulla pellentesque dignissim enim sit amet venenatis. Leo duis ut diam quam nulla porttitor massa. Tristique risus nec feugiat in fermentum posuere urna nec. Vitae et leo duis ut. Vivamus arcu felis bibendum ut.</p> 
-            
+          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. Nulla pellentesque dignissim enim sit amet venenatis. Leo duis ut diam quam nulla porttitor massa. Tristique risus nec feugiat in fermentum posuere urna nec. Vitae et leo duis ut. Vivamus arcu felis bibendum ut.</p>
+
           <p>Elit pellentesque habitant morbi tristique senectus et netus. Adipiscing bibendum est ultricies integer quis auctor. Tincidunt id aliquet risus feugiat in ante metus dictum. Quis viverra nibh cras pulvinar mattis nunc. Mi sit amet mauris commodo quis imperdiet massa tincidunt nunc. Ipsum dolor sit amet consectetur adipiscing elit. Lacus vel facilisis volutpat est velit.</p>
 
         </div>
 
 
       </div>
-      
+
     </div>
   </body>
 </html>
