--- a/www/welcomePage.html
+++ b/www/welcomePage.html
@@ -4,6 +4,7 @@
   <head>
     <title>Welcome!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/favicon"/>
   </head>
 
   <body>
@@ -55,7 +56,7 @@
           <img src="/images/money.png" alt="">
           <p>Duis ultricies lacus sed turpis tincidunt id. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque. Volutpat est velit egestas dui id. Nisl condimentum id</p>
         </div>
-        
+
         <div>
           <img src="/images/calendar-512.png" alt="">
           <p>Sed elementum tempus egestas sed. Posuere lorem ipsum dolor sit amet. Ut faucibus pulvinar elementum integer enim neque.Sed elementum tempus egestas sed. Posuere lorem ipsum dolor sit amet. Ut faucibus pulvinar elementum integer enim neque.</p>
