--- a/www/bank-statements.html
+++ b/www/bank-statements.html
@@ -4,6 +4,7 @@
   <head>
     <title>Welcome!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/favicon"/>
   </head>
 
   <body>
@@ -28,10 +29,10 @@
       <h1 class="content-title">Bank Statements</h1>
       <hr>
       <div class="subpage-content bank-statements">
-  
-        
+
+
       </div>
-      
+
     </div>
   </body>
 </html>
