--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -4,6 +4,7 @@
   <head>
     <title>Welcome!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/favicon"/>
   </head>
 
   <body>
