--- a/www/signInPage.html
+++ b/www/signInPage.html
@@ -4,6 +4,7 @@
   <head>
     <title>Welcome!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/favicon"/>
   </head>
 
   <body>
@@ -29,7 +30,7 @@
       <div class="subpage-content">
         <h1>Sign In - <a href="Dashboard.html" style="color: blue;">Temporary Dashboard Link</a></h1>
       </div>
-      
+
     </div>
   </body>
 </html>
