Content added to money saving tips page

--- a/www/saving-tips.html
+++ b/www/saving-tips.html
@@ -28,7 +28,82 @@
     <div class="main-subpage">
       <h1 class="content-title">Money Saving Tips</h1>
       <hr>
+      <div class="saving-tips-intro">
+        <p>Enim nec dui nunc mattis enim ut tellus elementum sagittis. Scelerisque viverra mauris in aliquam sem fringilla ut morbi. Id donec ultrices tincidunt arcu non sodales neque. Id volutpat lacus laoreet non curabitur gravida arcu. Urna nec tincidunt praesent semper feugiat. Tempus quam pellentesque nec nam aliquam sem. </p>
+      </div>
       <div class="subpage-content saving-tips">
+       
+        <div class="tip-icon">
+          <img src="/images/saving-tips/unidays.png" alt="">
+          <h3>UNiDAYS</h3>
+          <hr>
+          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <a href="https://www.myunidays.com/GB/en-GB" target="blank"><div class="default-button">View Resource</div></a>
+        </div>
+
+        <div class="tip-icon">
+          <img src="/images/saving-tips/sb-logo.png" alt="">
+          <h3>Student Beans</h3>
+          <hr>
+          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <a href="https://www.studentbeans.com/uk" target="blank"><div class="default-button">View Resource</div></a>
+        </div>
+
+        <div class="tip-icon">
+          <img src="/images/saving-tips/railcard.png" alt="">
+          <h3>Railcard</h3>
+          <hr>
+          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <a href="https://www.railcard.co.uk/" target="blank"><div class="default-button">View Resource</div></a>
+        </div>
+
+        <div class="tip-icon">
+          <img src="/images/saving-tips/Amazon.png" alt="">
+          <h3>Amazon Prime Student</h3>
+          <hr>
+          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <a href="https://www.amazon.co.uk/gp/student/signup/info/?ie=UTF8&ref_=sv_uk_9" target="blank"><div class="default-button">View Resource</div></a>
+        </div>
+
+        <div class="tip-icon">
+          <img src="/images/saving-tips/apple.png" alt="">
+          <h3>Apple Education Store</h3>
+          <hr>
+          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <a href="https://www.apple.com/uk/shop/education-pricing"  target="blank"><div class="default-button">View Resource</div></a>
+        </div>
+
+        <div class="tip-icon">
+          <img src="/images/saving-tips/national-express.png" alt="">
+          <h3>Young Persons Coachcard</h3>
+          <hr>
+          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <a href="https://www.nationalexpress.com/en/offers/coachcards"  target="blank"><div class="default-button">View Resource</div></a>
+        </div>
+
+        <div class="tip-icon">
+          <img src="/images/saving-tips/spotify.png" alt="">
+          <h3>Spotify Premium</h3>
+          <hr>
+          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <a href="https://www.spotify.com/uk/student/"  target="blank"><div class="default-button">View Resource</div></a>
+        </div>
+
+        <div class="tip-icon">
+          <img src="/images/saving-tips/TOTUM.png" alt="">
+          <h3>TOTUM</h3>
+          <hr>
+          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <a href="https://www.totum.com/" target="blank"><div class="default-button">View Resource</div></a>
+        </div>
+
+        <div class="tip-icon">
+          <img src="/images/saving-tips/adobe.png" alt="">
+          <h3>Adobe CC</h3>
+          <hr>
+          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <a href="https://www.adobe.com/uk/creativecloud/buy/students.html"  target="blank"><div class="default-button">View Resource</div></a>
+        </div>
 
 
       </div>
