Added bank statement upload functionality

--- a/www/bank-statements.html
+++ b/www/bank-statements.html
@@ -30,9 +30,13 @@
       <hr>
       <div class="subpage-content bank-statements">
 
+        <section class='statement-upload' id='fileContainer'>
+          <input type=file class='file-uploader' id='fileUpload' accept='.qif'/><br>
+        </section>
 
       </div>
 
     </div>
   </body>
+  <script src='/scripts/statement-upload.js'></script>
 </html>
