--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -5,9 +5,13 @@
     <title>Welcome!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="/favicon"/>
+    <!-- this loads google libraries -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content='30685749470-rd1biepfdvcmtpigdahj4ui4r45hnnua.apps.googleusercontent.com'>
   </head>
 
   <body>
+    <div class="g-signin2" data-onsuccess="onSignIn" hidden=true></div>
 
     <!-- NAVIGATION AND HEADER BAR -->
     <header class="header">
@@ -20,7 +24,7 @@
           </ul>
       </nav>
       <ul class="nav-links">
-        <li class="nav-link"><a href="/signInPage.html">Sign Out</a></li>
+        <li class="nav-link" onclick="signOut();"><a>Sign Out</a></li>
       </ul>
     </header>
 
@@ -99,4 +103,5 @@
       </div>
     </div>
   </body>
+  <script src='/scripts/google-auth.js'></script>
 </html>
