--- a/www/signInPage.html
+++ b/www/signInPage.html
@@ -2,12 +2,17 @@
 
 <html>
   <head>
-    <title>Welcome!</title>
+    <title>Sign In!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="/favicon"/>
+    <!-- this loads google libraries -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content='30685749470-rd1biepfdvcmtpigdahj4ui4r45hnnua.apps.googleusercontent.com'>
   </head>
 
   <body>
+
+
 
     <!-- NAVIGATION AND HEADER BAR -->
     <header class="header">
@@ -27,10 +32,14 @@
 
     <!-- MAIN CONTENT -->
     <div class="main-subpage">
+
       <div class="subpage-content">
-        <h1>Sign In - <a href="Dashboard.html" style="color: blue;">Temporary Dashboard Link</a></h1>
+        <!-- this puts a sign-in button, and a sign-out link, in the page -->
+        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        <!-- <h1>Sign In - <a href="Dashboard.html" style="color: blue;">Temporary Dashboard Link</a></h1> -->
       </div>
 
     </div>
   </body>
+  <script src='/scripts/google-auth.js'></script>
 </html>
