Added 404 page and fixed default hrefs

--- a/www/about.html
+++ b/www/about.html
@@ -14,7 +14,7 @@
       <h1 class="page-title"><a href="welcomePage.html">Student<span id="title-p2" >Budgets</span></a></h1>
       <nav>
           <ul class="nav-links">
-            <a href="/welcomePage.html"><li class="nav-link ">Home</li></a>
+            <a href="/"><li class="nav-link ">Home</li></a>
             <a href="/about.html"><li class="nav-link active-page">About</li></a>
             <a href="/contact.html"><li class="nav-link">Contact</li></a>
           </ul>
