--- a/www/welcomePage.html
+++ b/www/welcomePage.html
@@ -11,10 +11,10 @@
 
     <!-- NAVIGATION AND HEADER BAR -->
     <header class="header">
-      <h1 class="page-title"><a href="welcomePage.html">Student<span id="title-p2" >Budgets</span></a></h1>
+      <h1 class="page-title"><a href="/">Student<span id="title-p2" >Budgets</span></a></h1>
       <nav>
           <ul class="nav-links">
-            <a href="/welcomePage.html"><li class="nav-link active-page">Home</li></a>
+            <a href="/"><li class="nav-link active-page">Home</li></a>
             <a href="/about.html"><li class="nav-link">About</li></a>
             <a href="/contact.html"><li class="nav-link">Contact</li></a>
           </ul>
