--- a/www/404-not-found.html
+++ b/www/404-not-found.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Welcome!</title>
+    <title>404</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="/favicon"/>
     <!-- this loads google libraries -->
@@ -11,30 +11,33 @@
   </head>
 
   <body>
-    <div class="g-signin2" data-onsuccess="onSignIn" hidden=true></div>
+
+
 
     <!-- NAVIGATION AND HEADER BAR -->
     <header class="header">
-      <h1 class="page-title"><a href="/">Student<span id="title-p2" >Budgets</span></a></h1>
+      <h1 class="page-title"><a href="welcomePage.html">Student<span id="title-p2" >Budgets</span></a></h1>
       <nav>
           <ul class="nav-links">
-              <li class="nav-link"><a href="/dashboard.html">Dashboard</a></li>
-              <li class="nav-link"><a href="/account.html">My Account</a></li>
-              <li class="nav-link"><a href="/contact.html">Contact</a></li>
+            <a href="/"><li class="nav-link ">Home</li></a>
+            <a href="/about.html"><li class="nav-link">About</li></a>
+            <a href="/contact.html"><li class="nav-link">Contact</li></a>
           </ul>
       </nav>
       <ul class="nav-links">
-        <li class="nav-link" onclick="signOut();"><a>Sign Out</a></li>
+        <a href="/signInPage.html"><li class="nav-link">Sign In</li></a>
+        <a class="default-button" href="/signInPage.html">Sign Up</a>
       </ul>
     </header>
 
     <!-- MAIN CONTENT -->
     <div class="main-subpage">
-      <h1 class="content-title">Budget Report</h1>
-      <hr>
-      <div class="subpage-content budget-report">
 
-
+      <div class="content-404">
+        <h1>404 <span class='green-colour'>Not Found</span></h1>
+        <h2>The requested resource could not be found</h2>
+        <br><br>
+        <h3><a href='/'>Click Here</a> to be taken back to safety</h3>
       </div>
 
     </div>
