--- a/www/calendar.html
+++ b/www/calendar.html
@@ -15,7 +15,7 @@
 
     <!-- NAVIGATION AND HEADER BAR -->
     <header class="header">
-      <h1 class="page-title"><a href="welcomePage.html">Student<span id="title-p2" >Budgets</span></a></h1>
+      <h1 class="page-title"><a href="/">Student<span id="title-p2" >Budgets</span></a></h1>
       <nav>
           <ul class="nav-links">
               <li class="nav-link"><a href="/dashboard.html">Dashboard</a></li>
