--- a/www/calendar.html
+++ b/www/calendar.html
@@ -7,6 +7,8 @@
     <link rel="icon" type="image/png" href="/favicon"/>
   </head>
 
+  <script src="index.js"></script>
+
   <body>
 
     <!-- NAVIGATION AND HEADER BAR -->
@@ -32,6 +34,8 @@
 
 
       </div>
+
+      <iframe src="https://calendar.google.com/calendar/embed?src=c_68p2ou1unf5kgkbecbl4oiutu4%40group.calendar.google.com&ctz=Europe%2FLondon" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
     </div>
   </body>
