--- a/www/welcomePage.html
+++ b/www/welcomePage.html
@@ -58,7 +58,8 @@
         </div>
 
         <div>
-          <img src="/images/calendar-512.png" alt="">
+          <p><a href="/calendar.html">
+          <img src="/images/calendar-512.png" alt=""></p>
           <p>Sed elementum tempus egestas sed. Posuere lorem ipsum dolor sit amet. Ut faucibus pulvinar elementum integer enim neque.Sed elementum tempus egestas sed. Posuere lorem ipsum dolor sit amet. Ut faucibus pulvinar elementum integer enim neque.</p>
         </div>
       </div>
