Changes to the budget report page

--- a/www/budget-report.html
+++ b/www/budget-report.html
@@ -38,6 +38,8 @@
         </div>
 
         <div class="budget-report">
+          <h2>Select a Month to View Your Spending</h2>
+          <br>
           <div class="month-option">
             <div class="month default-button" id="january">Jan</div>
             <div class="month default-button" id="february">Feb</div>
@@ -52,10 +54,18 @@
             <div class="month default-button" id="november">Nov</div>
             <div class="month default-button" id="december">Dec</div>
           </div>
-          
+          <br>
+          <h3 id="total-spend"></h3>
+          <br>
           <canvas id="budget-graph">
 
           </canvas>
+          <div>
+            <br>
+            <h2>Your Spending Throughout The Year</h2>
+            <br>
+            <canvas id="yearly-spend" ></canvas>
+          </div>
 
         </div>
 
