--- a/www/saving-tips.html
+++ b/www/saving-tips.html
@@ -49,7 +49,7 @@
           <img src="/images/saving-tips/sb-logo.png" alt="">
           <h3>Student Beans</h3>
           <hr>
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <p>Student Beans is the one of the world's leading student discounting networks. Student Beans is a digital marketing company which helps brands and services run their own student discounts and programmes to connect with millions of students across 52 countries to drive student sales.</p>
           <a href="https://www.studentbeans.com/uk" target="blank"><div class="default-button">View Resource</div></a>
         </div>
 
