--- a/www/saving-tips.html
+++ b/www/saving-tips.html
@@ -41,7 +41,7 @@
           <img src="/images/saving-tips/unidays.png" alt="">
           <h3>UNiDAYS</h3>
           <hr>
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <p>UNiDAYS is a discount website founded in 2011 that is available for free to students worldwide. Current students in higher education can sign up with UNiDAYS to get discounted deals on products and services. You are able to get discounts on big brands such as Apple, Nike, Asos and many more! </p>
           <a href="https://www.myunidays.com/GB/en-GB" target="blank"><div class="default-button">View Resource</div></a>
         </div>
 
@@ -57,7 +57,7 @@
           <img src="/images/saving-tips/railcard.png" alt="">
           <h3>Railcard</h3>
           <hr>
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <p>The 16–25 Railcard is an annual card giving you discounts on certain types of railway tickets in the UK. It is available to anybody aged between 16 and 25, and certain mature students aged 26+.</p>
           <a href="https://www.railcard.co.uk/" target="blank"><div class="default-button">View Resource</div></a>
         </div>
 
@@ -65,7 +65,7 @@
           <img src="/images/saving-tips/Amazon.png" alt="">
           <h3>Amazon Prime Student</h3>
           <hr>
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <p>Amazon Prime Student is a membership programme created especially for higher education students studying in the UK and Republic of Ireland (ROI). This membership enables students to receive discounts and promotional codes when making a purchase.</p>
           <a href="https://www.amazon.co.uk/gp/student/signup/info/?ie=UTF8&ref_=sv_uk_9" target="blank"><div class="default-button">View Resource</div></a>
         </div>
 
@@ -73,7 +73,7 @@
           <img src="/images/saving-tips/apple.png" alt="">
           <h3>Apple Education Store</h3>
           <hr>
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <p>You can now save when you buy a new Mac or iPad for university with Apple Education Pricing. These Discounts are available for students, teachers and staff. </p>
           <a href="https://www.apple.com/uk/shop/education-pricing"  target="blank"><div class="default-button">View Resource</div></a>
         </div>
 
