--- a/www/saving-tips.html
+++ b/www/saving-tips.html
@@ -81,7 +81,7 @@
           <img src="/images/saving-tips/national-express.png" alt="">
           <h3>Young Persons Coachcard</h3>
           <hr>
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <p>If you are aged 16 - 26 or are a full-time student, A Young Persons Coachcard gives you ⅓ off all Standard and Fully Flexible fares and 15% off travel to events and festivals, all for just £12.50 a year or £30 for three years. </p>
           <a href="https://www.nationalexpress.com/en/offers/coachcards"  target="blank"><div class="default-button">View Resource</div></a>
         </div>
 
@@ -89,7 +89,7 @@
           <img src="/images/saving-tips/spotify.png" alt="">
           <h3>Spotify Premium</h3>
           <hr>
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <p>Spotify now offer a premium membership for students where you can now Save 50% on Spotify Premium for Students. Unlimited music, podcasts, and more. For just £4.99/month. </p>
           <a href="https://www.spotify.com/uk/student/"  target="blank"><div class="default-button">View Resource</div></a>
         </div>
 
@@ -97,7 +97,7 @@
           <img src="/images/saving-tips/TOTUM.png" alt="">
           <h3>TOTUM</h3>
           <hr>
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <p>TOTUM student discount card and app giving you access to huge offers on food and essentials, tech, travel and home delivery. Plus fashion, beauty and a whole lot more. In-store and online, TOTUM puts all the best student coupons, vouchers and discounts right where you want/need them. </p>
           <a href="https://www.totum.com/" target="blank"><div class="default-button">View Resource</div></a>
         </div>
 
@@ -105,7 +105,7 @@
           <img src="/images/saving-tips/adobe.png" alt="">
           <h3>Adobe CC</h3>
           <hr>
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+          <p>howcase Your Creativity with Adobe CC. Polish up any projects and make your vision one to remember with student pricing on the Creative Apps plan, which gives you 20+ cutting-edge creative tools — plus 100GB of cloud storage. Students and teachers save up to 65%. </p>
           <a href="https://www.adobe.com/uk/creativecloud/buy/students.html"  target="blank"><div class="default-button">View Resource</div></a>
         </div>
 
