--- a/www/saving-tips.html
+++ b/www/saving-tips.html
@@ -105,7 +105,7 @@
           <img src="/images/saving-tips/adobe.png" alt="">
           <h3>Adobe CC</h3>
           <hr>
-          <p>howcase Your Creativity with Adobe CC. Polish up any projects and make your vision one to remember with student pricing on the Creative Apps plan, which gives you 20+ cutting-edge creative tools — plus 100GB of cloud storage. Students and teachers save up to 65%. </p>
+          <p>Showcase Your Creativity with Adobe CC. Polish up any projects and make your vision one to remember with student pricing on the Creative Apps plan, which gives you 20+ cutting-edge creative tools — plus 100GB of cloud storage. Students and teachers save up to 65%. </p>
           <a href="https://www.adobe.com/uk/creativecloud/buy/students.html"  target="blank"><div class="default-button">View Resource</div></a>
         </div>
 
