--- a/www/saving-tips.html
+++ b/www/saving-tips.html
@@ -33,7 +33,7 @@
       <h1 class="content-title">Money Saving Tips</h1>
       <hr>
       <div class="saving-tips-intro">
-        <p>Enim nec dui nunc mattis enim ut tellus elementum sagittis. Scelerisque viverra mauris in aliquam sem fringilla ut morbi. Id donec ultrices tincidunt arcu non sodales neque. Id volutpat lacus laoreet non curabitur gravida arcu. Urna nec tincidunt praesent semper feugiat. Tempus quam pellentesque nec nam aliquam sem. </p>
+        <p>Saving is income which is not spent. Methods of saving include putting money aside in or looking for deals when it comes to making purchases. Saving also involves reducing expenditures, such as recurring costs and here we are offering you tips on how you could save. </p>
       </div>
       <div class="subpage-content saving-tips">
 
